--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "kerberos": "~0.0.x",
     "parse": "~1.8.0",
     "parse-server": "*",
-    "parse-server-s3-adapter": "^1.0.6"
+    "parse-server-s3-adapter": "^1.0.6",
+    "parse-server-simple-mailgun-adapter": "^1.0.0"
   },
   "scripts": {
     "start": "node index.js"
